[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Circle.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
circles_per_level = 8

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 166.29, 540.806 )

[node name="Camera2D" type="Camera2D" parent="." index="1"]

position = Vector2( 144.959, 734.67 )
offset = Vector2( 0, -200 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[node name="Circle" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 228.457, 540.419 )

[node name="HUD" parent="." index="3" instance=ExtResource( 4 )]

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]

[connection signal="capture" from="Circle" to="." method="_on_Circle_capture"]

[connection signal="explode" from="Circle" to="." method="_on_Circle_explode"]


